syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.sanderploegsma.orders";
option java_outer_classname = "OrdersProto";

package orders;

service Orders {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message GetOrdersRequest {

}

message GetOrdersResponse {
    repeated Order orders = 1;
}

message GetOrderRequest {
    int64 id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message Order {
    int64 id = 1;
    int64 quantity = 2;
}